Added version to CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,9 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(qcustomplot)
+project(qcustomplot VERSION 1.3.1)
 
 include(GNUInstallDirs)
+include(CMakePackageConfigHelpers)
 
 # Find Qt packages
 find_package(Qt5 COMPONENTS Core Widgets PrintSupport REQUIRED)
@@ -27,4 +28,10 @@ export(TARGETS qcustomplot
         FILE "${CMAKE_CURRENT_BINARY_DIR}/qcustomplotConfig.cmake")
 
 install(EXPORT qcustomplotConfig
-        DESTINATION "${CMAKE_INSTALL_LIBDIR}/qcustomplot/cmake")
+        DESTINATION "${CMAKE_INSTALL_LIBDIR}/qcustomplot")
+
+write_basic_package_version_file(${CMAKE_CURRENT_BINARY_DIR}/qcustomplotConfigVersion.cmake
+        VERSION ${PROJECT_VERSION}
+        COMPATIBILITY ExactVersion)
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/qcustomplotConfigVersion.cmake
+        DESTINATION "${CMAKE_INSTALL_LIBDIR}/qcustomplot")
