--- a/qcustomplot/CMakeLists.txt
+++ b/qcustomplot/CMakeLists.txt
@@ -1,10 +1,13 @@
-add_library(qcustomplot STATIC
-        qcustomplot.cpp)
+file(GLOB_RECURSE Sources *.cpp)
 
+add_library(qcustomplot STATIC)
+target_sources(qcustomplot PRIVATE ${Sources})
+set(includes newFiles newFiles/extra)
+target_include_directories(qcustomplot PRIVATE ${includes})
 target_link_libraries(qcustomplot PUBLIC
-        Qt5::Core
-        Qt5::Widgets
-        Qt5::PrintSupport)
+        Qt6::Core
+        Qt6::Widgets
+        Qt6::PrintSupport)
 
 target_include_directories(qcustomplot PUBLIC
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
